--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -44,6 +44,7 @@ bb8-redis = "0.10.1"
 redis = { version = "0.21.5", features = ["tokio-comp"] }
 thiserror = "1.0.30"
 bytes = "1.1.0"
+blake2 = "0.10.4"
 # sea orm
 sea-orm = { version = "0.7.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
 sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "migrate" ] }
